--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                         <div class="details-wrap">
                           <div class="details">
                             <div class="details-inner">
-                              <div class="title preserve-whitespace">企业招聘 | 在家做老师</div>
+                              <div class="title preserve-whitespace">企业招聘 | 在家做ESL老师</div>
                             </div>
                           </div>
                         </div>
