--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                         <div class="details-wrap">
                           <div class="details">
                             <div class="details-inner">
-                              <div class="title preserve-whitespace">思课教育企业招聘 | MG动画跟谁学</div>
+                              <div class="title preserve-whitespace">思课教育 | MG动画跟谁学</div>
                             </div>
                           </div>
                         </div>
